force-app/main/default/objects/Clinical_Observation__c/Clinical_Observation__c.object-meta.xml
<CustomObject>
<description>Clinical readings and observations captured for patients.</description>
<label>Clinical Observation</label>
<nameField>
<displayFormat>OBS-{000000}</displayFormat>
<label>Clinical Observation Name</label>
<type>AutoNumber</type>
</nameField>
<pluralLabel>Clinical Observations</pluralLabel>
<sharingModel>ControlledByParent</sharingModel>
</CustomObject>