force-app/main/default/objects/Clinical_Observation__c/fields/Care_Journey__c.field-meta.xml
<CustomField>
    <fullName>Care_Journey__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Care Journey</label>
    <referenceTo>Care_Journey__c</referenceTo>
    <relationshipLabel>Care Journey Records</relationshipLabel>
    <relationshipName>ClinicalObservationCareJourney</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>