force-app/main/default/objects/Clinical_Observation__c/fields/LOINC_Code__c.field-meta.xml
<CustomField>
    <fullName>LOINC_Code__c</fullName>
    <label>LOINC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>