force-app/main/default/objects/Clinical_Observation__c/fields/Observed_On__c.field-meta.xml
<CustomField>
    <fullName>Observed_On__c</fullName>
    <label>Observed On</label>
    <type>Date</type>
    <required>true</required>
</CustomField>