force-app/main/default/objects/Clinical_Observation__c/fields/Outside_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Outside_Threshold__c</fullName>
    <label>Outside Threshold</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>