force-app/main/default/objects/Clinical_Observation__c/fields/Patient__c.field-meta.xml
<CustomField>
<fullName>Patient__c</fullName>
<label>Patient</label>
<type>Lookup</type>
<required>true</required>
<referenceTo>Account</referenceTo>
<deleteConstraint>Restrict</deleteConstraint>
<relationshipLabel>Patient Records</relationshipLabel>
<relationshipName>ClinicalObservationPatient</relationshipName>
</CustomField>