force-app/main/default/objects/Clinical_Observation__c/fields/Source__c.field-meta.xml
<CustomField>
<fullName>Source__c</fullName>
<label>Source</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Patient reported</fullName>
</value>
<value>
<fullName>FHIR</fullName>
</value>
<value>
<fullName>Manual</fullName>
<default>true</default>
<label>Manual</label>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>