force-app/main/default/objects/Clinical_Observation__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <label>Source Record ID</label>
    <length>255</length>
    <type>Text</type>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>