force-app/main/default/objects/Clinical_Observation__c/fields/Threshold_Rule__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Rule__c</fullName>
    <label>Threshold Rule</label>
    <type>Text</type>
    <length>80</length>
</CustomField>