force-app/main/default/objects/Clinical_Observation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HbA1c</fullName>
            </value>
            <value>
                <fullName>Fasting glucose</fullName>
            </value>
            <value>
                <fullName>Post-meal glucose</fullName>
            </value>
            <value>
                <fullName>Random glucose</fullName>
                <default>true</default>
                <label>Random glucose</label>
            </value>
            <value>
                <fullName>BP systolic</fullName>
            </value>
            <value>
                <fullName>BP diastolic</fullName>
            </value>
            <value>
                <fullName>Weight</fullName>
            </value>
            <value>
                <fullName>LDL</fullName>
            </value>
            <value>
                <fullName>eGFR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>