force-app/main/default/objects/Clinical_Observation__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>%</fullName>
                <default>true</default>
                <label>%</label>
            </value>
            <value>
                <fullName>mg/dL</fullName>
            </value>
            <value>
                <fullName>mmol/L</fullName>
            </value>
            <value>
                <fullName>mmHg</fullName>
            </value>
            <value>
                <fullName>kg</fullName>
            </value>
            <value>
                <fullName>mL/min/1.73m2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>