force-app/main/default/objects/Clinical_Observation__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>