force-app/main/default/objects/Clinical_Observation__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <label>By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>By Records</relationshipLabel>
    <relationshipName>Verified_By</relationshipName>
    <type>Lookup</type>
</CustomField>