force-app/main/default/objects/Clinical_Observation__c/OBS_Unit_Matches_Type.validationRule-meta.xml
<ValidationRule>
<fullName>OBS_Unit_Matches_Type</fullName>
<active>true</active>
<errorConditionFormula>(ISPICKVAL(Type__c,'HbA1c') &amp;&amp; NOT(ISPICKVAL(Unit__c,'%'))) || (CONTAINS(TEXT(Type__c),'BP') &amp;&amp; NOT(ISPICKVAL(Unit__c,'mmHg')))</errorConditionFormula>
<errorMessage>Unit does not match observation type.</errorMessage>
</ValidationRule>