force-app/main/default/objects/Clinical_Observation__c/OBS_Value_Positive.validationRule-meta.xml
<ValidationRule>
<fullName>OBS_Value_Positive</fullName>
<active>true</active>
<errorConditionFormula>Value__c &lt;= 0</errorConditionFormula>
<errorMessage>Value must be greater than zero.</errorMessage>
</ValidationRule>